Finalizando funcionalidade das instruções

--- a/imperio/estilos/instit_style.css
+++ b/imperio/estilos/instit_style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
 @font-face {/* - FONTE CHERLY - */
 	font-family: 'Cherly';
 	src: url('../fontes/Cherly.otf')
@@ -7,17 +8,33 @@
     font-family: 'Arnitta';
     src: url('../fontes/Arnitta\ Callina.otf')
     format('opentype');}
-@keyframes menuOpen{
+@keyframes menuOpen{ /* ANIMAÇÃO MENU ABRINDO */
 	0%{left: -350px;display: absolute;}
 	100%{left: 0px;}}
-@keyframes menuClose{
+@keyframes menuClose{ /* ANIMAÇÃO MENU FECHANDO */
 	0%{left: 0px;}
 	100%{left: -350px;display: none;}}
+@keyframes cartOpen{ /* ANIMAÇÃO CARRINHO ABRINDO */
+	0%{left: 100%;}
+	100%{left: calc(100% - 350px);}}
+@keyframes cartClose{ /* ANIMAÇÃO CARRINHO FECHANDO */
+	0%{display: block;left: calc(100% - 350px);}
+	100%{left: 100%;}}
 :root{/* - VARIAVEIS - */
    --mainbackcolor:#883636;
 	--secbackcolor:#FFCAB8;
+	--verylightgray:#eeeeee;
+	--lightButton:#3cdd9d;
+	--normalButton:#36cb90;
+	--normaltransparentButton:#39c08ae1;
+	--heavyButton:#2ca172;
+	--whatsColor:#25D366;
+	--lightwhatsColor:#2ceb72;
 	--titlefont:'Cherly', sans-serif;
 	--sectitlefont:'Arnitta', sans-serif;
+	--arialFont: Arial, Helvetica, sans-serif;
+	--usualFont:'Dosis', sans-serif;
+	--promoFont:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--maintext:Verdana, Geneva, Tahoma, sans-serif;}
 *{/* - START - */
     margin: 0px;
@@ -174,27 +191,44 @@ main{
 	font-size: 1em;
 	line-height: 30px;
 }
-footer{
-	
+footer{ /* FOOTER */
     display: flex;
     flex-direction: row-reverse;
 	justify-content: left;
     
-	/*margin-left: 50px;*/
 	font-family: var(--maintext);
 	margin-top: 100px;
 	padding-top: 50px;
 	padding-left: 5px;
 	height: 400px;
 	width: 100%;
-	background-color: #883636;
+	background-color: var(--mainbackcolor);
+}
+#creditsFooter{
+	padding: 5px;
+	text-align: center;
+	font-family: var(--arialFont);
+	background-color: var(--secbackcolor);
+	font-size: .75em;
+}
+#creditsFooter > h3 > a{
+	text-decoration: none;
+	color: var(--mainbackcolor);
+	transition: .4s;
+	font-size: 1em;
+}
+#creditsFooter > h3 > a:hover{
+	padding-left: 1px;
+	padding-right: 1px;
+	transition: 1s;
+	font-size: 1.1em;
 }
 .footerblock{
 	margin-right: 6vw;
 }
 .footerblock h1{
 	font-size: 1.5em;
-	color: #FFCAB8;
+	color: var(--secbackcolor);
 }
 .footerblock > ul{
 	list-style: none;
@@ -202,12 +236,20 @@ footer{
 .footerblock > ul > li{
 	padding-top: 5px;
 }
-.footerblock > ul > li > a{
+.footeritem > a{
 	font-family: Arial, Helvetica, sans-serif;
 	text-decoration: none;
 	color: white;
 	font-size: 1em;
 	font-weight: 400;
+	border-radius: 3px;
+	transition: 1s;
+}
+.footeritem > a:hover{
+	width: fit-content;
+	background-color: var(--secbackcolor);
+	color: black;
+	transition: .4s;
 }
 .permaconectado{
 	display: flex;
@@ -221,10 +263,9 @@ footer{
 	transition: 1s;
 }
 .permaconectado > li > a > img:hover{
-	background-color: #FFCAB8;
+	background-color: var(--secbackcolor);
 	transition: .4s;
 	filter: none;
-	/*box-shadow: 0px 0px 40px #003547;*/
 }
 .shadowBox{
 	position: absolute;
@@ -281,7 +322,6 @@ footer{
 	filter: invert();
 	margin-right: 10px;
 }
-
 #menuHeader{
 	display: flex;
 	flex-direction: row;
