--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -61,19 +61,6 @@ header{ /* HEADER */
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;}
-/*
-body::-webkit-scrollbar {
-	width: 12px;              
-}
-body::-webkit-scrollbar-track {
-	background: white;     
-}
-body::-webkit-scrollbar-thumb{
-	background-color: var(--mainbackcolor);
-	border-radius: 20px;
-	border: 3px solid white;
-}*/
-
 #rightHeader{
 	width: 100%;
 	display: flex;
@@ -362,10 +349,10 @@ main{ /* MAIN */
 }
 .shopProduct{
 	margin-top: calc(2vw + 15px);
-	margin-right: calc(.5vw);
-	margin-left: calc(.5vw);
-	width: 220px;
-	height: 300px;
+	margin-right: .5vw;
+	margin-left: .5vw;
+	width: 200px;
+	height: 320px;
 	border: 1px solid var(--verylightgray);
 	outline: 0px double var(--mainbackcolor);
 	display: flex;
@@ -379,11 +366,13 @@ main{ /* MAIN */
 }
 .shopProduct > img{
 	display: block;
-	width: 80%;
-	padding: 20px 10px;
+	width: 100%;
+	padding: 10px 0px;
 	margin: 0 auto auto auto;
+	border-bottom: 1px solid var(--verylightgray);
 }
 .descProduto{
+	margin: 5px 0px;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -407,10 +396,10 @@ main{ /* MAIN */
 	width: 100%;
 	text-align: center;
 	font-family: var(--maintext);
-	font-size: .9em;
-	font-weight: 100;
-	padding-left: 10px;
-	padding-right: 10px;
+	font-size: .75em;
+	font-weight: 600;
+	padding-left: 2px;
+	padding-right: 2px;
 }
 .valorProduto{
 	font-family: var(--usualFont);
@@ -458,7 +447,7 @@ footer{ /* FOOTER */
 	font-size: 1.5em;
 	color: var(--secbackcolor);
 }
-.footerblock > ul{
+.footerblock > ul{/*PERMACONECTADO*/
 	list-style: none;
 }
 .footerblock > ul > li{
