--- a/imperio/estilos/media-query.css
+++ b/imperio/estilos/media-query.css
@@ -112,9 +112,9 @@
         font-size: .7em;
     }
     #showProduct{
-        margin: 20px auto 60px auto;
+        margin: 15px auto 60px auto;
         max-width: 1200px;
-        padding: 25px 15px 0px 15px;
+        padding: 0px 15px;
         display: none;
         gap: 10px;
         grid-template-columns: 1fr;
