--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -361,13 +361,14 @@ main{ /* MAIN */
 }
 .shopProduct:hover{
 	cursor: pointer;
-	outline: 3px solid var(--mainbackcolor);
+	border: 1px solid var(--mainbackcolor);
+	outline: 1px solid var(--mainbackcolor);
 	transition: .1s;
 }
 .shopProduct > img{
 	display: block;
 	width: 100%;
-	padding: 10px 0px;
+	padding: 0px 0px;
 	margin: 0 auto auto auto;
 	border-bottom: 1px solid var(--verylightgray);
 }
@@ -657,7 +658,7 @@ footer{ /* FOOTER */
 	height: fit-content;
 	border: 1px solid var(--verylightgray);
 	outline: 0px double var(--mainbackcolor);
-	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.137);
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.05);
 	padding: 10px;
 	display: grid;
 	gap: 5px;
@@ -673,8 +674,10 @@ footer{ /* FOOTER */
 	width: 100%;
 	grid-column: 1;
 	grid-row: 1;
+	border-radius: 15px;
 }
 .cartElementName{
+	padding-left: 5px;
 	font-size: .8em;
 	grid-column: 2;
 	grid-row: 1;
