--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -261,8 +261,8 @@ main{ /* MAIN */
 	justify-content: space-evenly;
 }
 .SecimgA, .SecimgB, .SecimgC{
-	outline: 0px double var(--mainbackcolor);
-
+	outline: 1px double var(--verylightgray);
+	border-radius: 50px;
 	width: 25%;
 	padding-left: 3vw;
 	padding-right: 3vw;
