--- a/paintweb/style.css
+++ b/paintweb/style.css
@@ -4,37 +4,39 @@
     padding: 0px;
     box-sizing: border-box;
 }
+html{
+    height: 100%;
+}
+body{
+    height: 75%;
+}
 header{
-    height: 200px;
-    border: 1px solid black;
-    background-color: #cacaca;
+    height: 150px;
+    border: 1px solid #aaaaaa;
+    background-color: #d8d8d8;
+}
+#valueTester{
+    font-size: 2em;
 }
 main{
-    margin-top: -1px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-aside{
-    margin-right: -1px;
-    width: 100%;
-    height: 100%px;
-    border: 1px solid black;
-    background-color: #cacaca;
+    background-color: #808080;
+    height: 100%;
 }
 canvas{
-    border: 1px solid black;
+    background-color: white;
+    border: 1px solid #d3d3d3;
+    box-shadow: 3px 3px 3px #0000002f;
 }
-canvas:hover{
-    cursor: pointer;
+footer{
+    border: 1px solid #aaaaaa;
+    background-color: #d8d8d8;
+    font-family: monospace;
 }
-.lateralObj{
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(100, 100, 100);
-    border: 2px outset darkgray;
-    height: fit-content;
+footer > a{
+    font-size: 1.5em;
+    color: black;
+    text-decoration: none;
 }
-.lateralObj:hover{
-    background-color: rgb(226, 226, 226);
-    cursor: pointer;
+footer > a:hover{
+    text-decoration: underline;
 }
