--- a/html-css-javascript/callback/style.css
+++ b/html-css-javascript/callback/style.css
@@ -13,7 +13,7 @@ html{
     height: 100%;
 }
 body{
-    height: fit-content;
+    height: 100%;
 }
 header{
     background-color: var(--maincolor);
@@ -31,11 +31,16 @@ header > button{
     padding: 10px;
 }
 main{
-    height: 100%;
+    height: 100vh;
     background-color: var(--lightcolor);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+}
+footer{
+    margin-top: auto;
+    height: 100px;
+    background-color: var(--maincolor);
 }
 .element{
     width: 44%;
