--- a/relogio-react/relogio/src/app/globals.css
+++ b/relogio-react/relogio/src/app/globals.css
@@ -31,4 +31,10 @@ body{
   border-radius: 20px;
   padding: 10px;
   box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.233);
+  font-size: 3em;
+}
+p{
+  font-size: 3em;
+  font-weight: bolder;
+  color: rgb(0, 183, 255);
 }
